--- a/base.html
+++ b/base.html
@@ -11,9 +11,9 @@
         <h1>Bienvenido a Mi Página Web</h1>
         <nav>
             <ul>
-                <li><a href="#">Inicioa</a></li>
+                <li><a href="#">InicioOOOOOOOOOOOO</a></li>
                 <li><a href="#">Acerca de</a></li>
-                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Servicios</a></li>w
                 <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
